[package]
name = "tsuzulint-rule-max-ten"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tsuzulint-rule-pdk = { path = "../rules-pdk" }
extism-pdk = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
rmp-serde = "1.3"
serde_json = "1.0"
